manifest/oss/nginx/ingress-appgw-to-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appgw-to-nginx
  namespace: nginx-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
    - host: "*.khangtictoc.io"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-ingress-controller
                port:
                  number: 80
